@@ -7,6 +7,7 @@ lib/Class/Data/Inheritable/Translucent.pm
 t/00-load.t
 t/01-basic_tests.t
 t/02-nonhash_objects.t
+t/03-class_tests.t
 t/changes.t
 t/critic.t
 t/pod-coverage.t
