@@ -4,39 +4,64 @@ NAME
 
 SYNOPSIS
       package Foo;
-      use base 'Class::Data::Inheritable::Translucent';
+      use base qw(Class::Data::Inheritable::Translucent);
 
-      Foo->mk_translucent("bar");
-      Foo->bar("baz");
+      Foo->mk_class_accessor("cbar");
+      Foo->mk_translucent_accessor("tbar");
 
+      Foo->cbar("baz");
+      Foo->tbar("baz");
       $obj = Foo->new;
+      print $obj->cbar; # prints "baz"
+      print $obj->tbar; # prints "baz"
+      print Foo->cbar;  # prints "baz"
+      print Foo->tbar;  # prints "baz"
 
-      print $obj->bar; # prints "baz"
+      $obj->cbar("whatever");
+      $obj->tbar("whatever");
+      print $obj->cbar; # prints "whatever"
+      print $obj->tbar; # prints "whatever"
+      print Foo->cbar;  # prints "whatever"
+      print Foo->tbar;  # prints "baz"
 
-      $obj->bar("whatever");
+      Foo->cbar("qux");
+      Foo->tbar("qux");
+      print $obj->cbar; # prints "qux"
+      print $obj->tbar; # prints "whatever"
+      print Foo->cbar;  # prints "qux"
+      print Foo->tbar;  # prints "qux"
 
-      print $obj->bar; # prints "whatever"
-      print Foo->bar;  # prints "baz"
-
-      $obj->bar(undef);
-
-      print $obj->bar; # prints "baz"
+      $obj->cbar(undef);
+      $obj->tbar(undef);
+      print $obj->cbar; # prints nothing
+      print $obj->tbar; # prints "qux"
+      print Foo->cbar;  # prints nothing
+      print Foo->tbar;  # prints "qux"
 
 DESCRIPTION
     This module is based on Class::Data::Inheritable, and is largely the
-    same, except the class data accessors double as translucent object
-    attributes.
+    same except the class data accessors optionally double as translucent
+    object attribute accessors.
 
     The value of object attribute $attribute, by default, is stored in
     $object->{$attribute}. See the attrs() method, explained below, on how
     to change that.
 
 METHODS
-    mk_translucent
-        Creates inheritable class data / translucent instance attributes.
-        Does not install the accessor method if a subroutine of the same
-        name already exists; likewise for the alias method
+    mk_class_accessor
+        Creates an accessor for inheritable, overridable class data. Does
+        not install the accessor method if a subroutine of the same name
+        already exists; likewise for the alias method
         (_<attribute>_accessor()).
+
+    mk_translucent_accessor
+        Creates an accessor for inheritable, overridable class data which
+        doubles as a translucent object attribute accessor. Does not install
+        the accessor method if a subroutine of the same name already exists;
+        likewise for the alias method (_<attribute>_accessor()).
+
+    mk_translucent
+        Alias for mk_translucent_accessor(), for backwards compatibility.
 
     attrs
         This method is called by the generated accessors and, by default,
@@ -63,7 +88,7 @@ COPYRIGHT & LICENSE
     in Version 1.00 onwards Copyright (C) 2009, 2011, 2014 Steve Hay. All
     rights reserved.
 
-    mk_translucent is based on mk_classdata from Class::Data::Inheritable,
+    _mk_accessor is based on mk_classdata from Class::Data::Inheritable,
     Copyright Damian Conway and Michael G Schwern, licensed under the terms
     of the Perl Artistic License.
 
@@ -78,27 +103,33 @@ BUGS
     ranslucent.
 
 SEE ALSO
-    * Class::Data::Inheritable - Inheritable, overridable class data without
-      the translucent object data.
+    * Class::Data::Inheritable - An almost exact duplicate of the
+      mk_class_accessor() part of this module, which this module was based
+      on.
 
-    * Class::Data::Accessor - An almost exact duplicate of this module,
-      created only a fortnight before it!
+      However, as of version 0.08, it doesn't make use of Sub::Name (so all
+      accessor methods created by it will show up as "__ANON__" in, e.g.
+      profiling tools), it doesn't support non hash-based objects, and it
+      will blindly overwrite any existing (accessor) methods.
 
-      However, as of version 0.04004, it doesn't make use of Sub::Name (so
-      all accessor methods created by it will show up as "__ANON__" in, e.g.
-      profiling tools), it doesn't support non hash-based objects, it
-      doesn't support the use of "undef" to wipe out an overridden object
-      attribute's value and reinherit the class default, and it will blindly
-      overwrite any existing (accessor) methods. It has also been deprecated
-      in favour of Class::Accessor::Grouped (or Moose).
+    * Class::Data::Accessor - An almost exact duplicate of the
+      mk_translucent_accessor() part of this module, created only a
+      fortnight before it!
 
-    * Class::Accessor::Grouped - The "inherited" accessor type does the same
-      thing again.
+      However, as of version 0.04004, it also doesn't make use of Sub::Name
+      or support non hash-based objects, does blindly overwrite any existing
+      methods, and it also doesn't support the use of "undef" to wipe out an
+      overridden object attribute's value and reinherit the class default.
+      It has also been deprecated in favour of Class::Accessor::Grouped (or
+      Moose).
 
-      However, as of version 0.10010, whilst this does make use of
-      Sub::Name, it still doesn't support non hash-based objects or "undef"
-      to reset an overridden object attribute's value, and also blindly
-      overwrites existing methods.
+    * Class::Accessor::Grouped - The "inherited" accessor type also does the
+      same thing as the mk_translucent_accessor() part of this module.
+
+      However, as of version 0.10010, whilst it does make use of Sub::Name,
+      it still doesn't support non hash-based objects, does blindly
+      overwrite existing methods, and doesn't support "undef" to reset an
+      overridden object attribute's value
 
     * perltooc - Tom's OO Tutorial for Class Data in Perl - a pretty nice
       Class Data tutorial for Perl
