@@ -11,6 +11,9 @@ Class::Data::Inheritable::Translucent - Inheritable, overridable, translucent cl
 
 =cut
 
+use constant _ATTR_TYPE_CLASS       => 1;
+use constant _ATTR_TYPE_TRANSLUCENT => 2;
+
 our $VERSION = '1.05';
 
 if (eval { require Sub::Name }) {
@@ -20,28 +23,45 @@ if (eval { require Sub::Name }) {
 =head1 SYNOPSIS
 
   package Foo;
-  use base 'Class::Data::Inheritable::Translucent';
+  use base qw(Class::Data::Inheritable::Translucent);
 
-  Foo->mk_translucent("bar");
-  Foo->bar("baz");
+  Foo->mk_class_accessor("cbar");
+  Foo->mk_translucent_accessor("tbar");
 
+  Foo->cbar("baz");
+  Foo->tbar("baz");
   $obj = Foo->new;
+  print $obj->cbar; # prints "baz"
+  print $obj->tbar; # prints "baz"
+  print Foo->cbar;  # prints "baz"
+  print Foo->tbar;  # prints "baz"
 
-  print $obj->bar; # prints "baz"
+  $obj->cbar("whatever");
+  $obj->tbar("whatever");
+  print $obj->cbar; # prints "whatever"
+  print $obj->tbar; # prints "whatever"
+  print Foo->cbar;  # prints "whatever"
+  print Foo->tbar;  # prints "baz"
 
-  $obj->bar("whatever");
+  Foo->cbar("qux");
+  Foo->tbar("qux");
+  print $obj->cbar; # prints "qux"
+  print $obj->tbar; # prints "whatever"
+  print Foo->cbar;  # prints "qux"
+  print Foo->tbar;  # prints "qux"
 
-  print $obj->bar; # prints "whatever"
-  print Foo->bar;  # prints "baz"
-
-  $obj->bar(undef);
-
-  print $obj->bar; # prints "baz"
+  $obj->cbar(undef);
+  $obj->tbar(undef);
+  print $obj->cbar; # prints nothing
+  print $obj->tbar; # prints "qux"
+  print Foo->cbar;  # prints nothing
+  print Foo->tbar;  # prints "qux"
 
 =head1 DESCRIPTION
 
-This module is based on Class::Data::Inheritable, and is largely the same,
-except the class data accessors double as translucent object attributes.
+This module is based on Class::Data::Inheritable, and is largely the same
+except the class data accessors optionally double as translucent object
+attribute accessors.
 
 The value of object attribute $attribute, by default, is stored in
 $object->{$attribute}.  See the attrs() method, explained below, on how to
@@ -51,21 +71,39 @@ change that.
 
 =over
 
+=item B<mk_class_accessor>
+
+Creates an accessor for inheritable, overridable class data.  Does not install
+the accessor method if a subroutine of the same name already exists; likewise
+for the alias method (_E<lt>attributeE<gt>_accessor()).
+
+=item B<mk_translucent_accessor>
+
+Creates an accessor for inheritable, overridable class data which doubles as a
+translucent object attribute accessor.  Does not install the accessor method if
+a subroutine of the same name already exists; likewise for the alias method
+(_E<lt>attributeE<gt>_accessor()).
+
 =item B<mk_translucent>
 
-Creates inheritable class data / translucent instance attributes.  Does not
-install the accessor method if a subroutine of the same name already exists;
-likewise for the alias method (_E<lt>attributeE<gt>_accessor()).
+Alias for mk_translucent_accessor(), for backwards compatibility.
 
 =cut
 
-sub mk_translucent {
+sub mk_class_accessor {
     my($class, $attribute, $value) = @_;
-    return $class->_mk_accessor($attribute, $value);
+    return $class->_mk_accessor($attribute, $value, _ATTR_TYPE_CLASS);
 }
 
+sub mk_translucent_accessor{
+    my($class, $attribute, $value) = @_;
+    return $class->_mk_accessor($attribute, $value, _ATTR_TYPE_TRANSLUCENT);
+}
+
+*mk_translucent = \&mk_translucent_accessor;
+
 sub _mk_accessor {
-    my($declaredclass, $attribute, $value) = @_;
+    my($declaredclass, $attribute, $value, $type) = @_;
 
     if (ref $declaredclass) {
         my $caller = (caller(1))[3];
@@ -74,14 +112,17 @@ sub _mk_accessor {
         Carp::croak("$caller() is a class method, not an object method");
     }
 
+    my $translucentattr = ($type == _ATTR_TYPE_TRANSLUCENT);
+
     my $accessor = sub {
         my $object = ref $_[0] ? $_[0] : undef;
+        my $usingobject = ($translucentattr && $object);
         my $class = ref $_[0] || $_[0];
 
-        return $class->_mk_accessor($attribute)->(@_)
-          if @_ > 1 && !$object && $class ne $declaredclass;
+        return $class->_mk_accessor($attribute, $value, $type)->(@_)
+          if @_ > 1 && !$usingobject && $class ne $declaredclass;
 
-        if ($object) {
+        if ($usingobject) {
             my $attrs = $object->attrs();
             $attrs->{$attribute} = $_[1] if @_ > 1;
             return $attrs->{$attribute} if defined $attrs->{$attribute};
@@ -152,7 +193,7 @@ Version 0.01 Copyright 2005 Ryan McGuigan, all rights reserved.
 Changes in Version 1.00 onwards Copyright (C) 2009, 2011, 2014 Steve Hay.  All
 rights reserved.
 
-mk_translucent is based on mk_classdata from Class::Data::Inheritable,
+_mk_accessor is based on mk_classdata from Class::Data::Inheritable,
 Copyright Damian Conway and Michael G Schwern, licensed under the terms of the
 Perl Artistic License.
 
@@ -171,30 +212,34 @@ F<http://rt.cpan.org/Public/Bug/Report.html?Queue=Class-Data-Inheritable-Translu
 
 =item *
 
-L<Class::Data::Inheritable> - Inheritable, overridable class data without the
-translucent object data.
+L<Class::Data::Inheritable> - An almost exact duplicate of the
+mk_class_accessor() part of this module, which this module was based on.
 
-=item *
-
-L<Class::Data::Accessor> - An almost exact duplicate of this module, created
-only a fortnight before it!
-
-However, as of version 0.04004, it doesn't make use of L<Sub::Name> (so all
+However, as of version 0.08, it doesn't make use of L<Sub::Name> (so all
 accessor methods created by it will show up as C<__ANON__> in, e.g. profiling
-tools), it doesn't support non hash-based objects, it doesn't support the use of
-C<undef> to wipe out an overridden object attribute's value and reinherit the
-class default, and it will blindly overwrite any existing (accessor) methods.
-It has also been deprecated in favour of L<Class::Accessor::Grouped> (or
-L<Moose>).
+tools), it doesn't support non hash-based objects, and it will blindly overwrite
+any existing (accessor) methods.
 
 =item *
 
-L<Class::Accessor::Grouped> - The C<inherited> accessor type does the same thing
-again.
+L<Class::Data::Accessor> - An almost exact duplicate of the
+mk_translucent_accessor() part of this module, created only a fortnight before
+it!
 
-However, as of version 0.10010, whilst this does make use of L<Sub::Name>, it
-still doesn't support non hash-based objects or C<undef> to reset an overridden
-object attribute's value, and also blindly overwrites existing methods.
+However, as of version 0.04004, it also doesn't make use of L<Sub::Name> or
+support non hash-based objects, does blindly overwrite any existing methods, and
+it also doesn't support the use of C<undef> to wipe out an overridden object
+attribute's value and reinherit the class default.  It has also been deprecated
+in favour of L<Class::Accessor::Grouped> (or L<Moose>).
+
+=item *
+
+L<Class::Accessor::Grouped> - The C<inherited> accessor type also does the same
+thing as the mk_translucent_accessor() part of this module.
+
+However, as of version 0.10010, whilst it does make use of L<Sub::Name>, it
+still doesn't support non hash-based objects, does blindly overwrite existing
+methods, and doesn't support C<undef> to reset an overridden object attribute's value
 
 =item *
 
